postgresql host 비밀값 추가

--- a/cluster/api/api-inform/01-api-inform-deployment.yaml
+++ b/cluster/api/api-inform/01-api-inform-deployment.yaml
@@ -18,6 +18,11 @@ spec:
           ports:
             - containerPort: 8081
           env:
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: postgres-host
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
