--- a/cluster/api/api-counting/01-api-counting-deployment.yaml
+++ b/cluster/api/api-counting/01-api-counting-deployment.yaml
@@ -18,6 +18,11 @@ spec:
           ports:
             - containerPort: 8082
           env:
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: postgres-host
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
